# todoApp

./: .gitignore  Makefile  Makefile.in  README.md  color.c  color.h  configure  configure.ac  configure.sh  resize_term.c  resize_term.h  todo.c  todo.h
src/: Makefile  Makefile.in  calendars.c  calendars.h  configure  configure.ac  day.h  globals.c  graphics.c  prio.c  prio.h  run.sh  todo.c  todo.h
